# fastapi-clean-example

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamlfmt  Dockerfile  Makefile  README.md  alembic.ini  config.toml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  env.example  pyproject.toml
.github/workflows/: ci.yaml
config/: toml_config_manager.py
config/local/: .env.local  .secrets.toml  Dockerfile  config.toml  docker-compose.yaml
docs/draw.io/: application_controller_interactor.drawio  application_interactor.drawio  configuration_flow_app.drawio  configuration_flow_toml_env.drawio  dep_graph_basic.drawio  dep_graph_detail.drawio  dep_graph_detail_white.drawio  dep_graph_inv_correct.drawio  dep_graph_inv_correct_di.drawio  dep_graph_inv_corrupted.drawio  dep_graph_scenarios.drawio  infrastructure_controller_interactor.drawio  infrastructure_interactor.drawio  onion.drawio
docs/draw.io/preview/: preview.drawio
scripts/dishka/: plot_dependencies_data.py
scripts/docker-compose/: run_server.sh
scripts/makefile/: docker_env.sh  docker_prune.sh  dotenv_from_toml.py  local_env.sh  migration.sh  pip_audit.sh  pycache_del.sh  slotscheck.sh  toml_pg_host.py
src/app/: run.py
src/app/application/: admin_create_user.py  admin_grant_admin.py  admin_inactivate_user.py  admin_list_users.py  admin_reactivate_user.py  admin_revoke_admin.py  committer.py  exceptions.py  id_generator.py  user_change_password.py
src/app/application/commands/: activate_user.py  admin_create_user.py  admin_grant_admin.py  admin_inactivate_user.py  admin_reactivate_user.py  admin_revoke_admin.py  change_password.py  create_user.py  deactivate_user.py  grant_admin.py  inactivate_user.py  reactivate_user.py  revoke_admin.py  set_user_password.py  super_admin_grant_admin.py  super_admin_revoke_admin.py  user_change_password.py
src/app/application/common/: permissions.py
src/app/application/queries/: admin_list_users.py  get_app_version.py  list_users.py
src/app/application/user/: exceptions.py  record_session.py  service_authorization.py
src/app/application/user_helpers/: exceptions.py  service_authorization.py
src/app/application_scenarios/account_sign_up/: interactor.py  payload.py
src/app/application_scenarios/admin_create_user/: interactor.py  payload.py
src/app/application_scenarios/admin_grant_admin/: interactor.py
src/app/application_scenarios/admin_inactivate_user/: interactor.py
src/app/application_scenarios/admin_list_users/: interactor.py
src/app/application_scenarios/admin_reactivate_user/: interactor.py
src/app/application_scenarios/admin_revoke_admin/: interactor.py
src/app/base/a_domain/: entity.py  value_object.py
src/app/base/b_application/: interactors.py
src/app/common/b_application/: exceptions.py
src/app/config/: loader.py  logging_.py  settings.py
src/app/core/commands/: activate_user.py  create_user.py  deactivate_user.py  exceptions.py  grant_admin.py  revoke_admin.py  set_user_password.py
src/app/core/common/: exceptions.py
src/app/core/queries/: list_users.py
src/app/domain/base/: entity.py  value_object.py
src/app/domain/entities/: base.py  user.py
src/app/domain/enums/: user_role.py
src/app/domain/exceptions/: user.py
src/app/domain/ports/: password_hasher.py  user_id_generator.py
src/app/domain/services/: user.py
src/app/domain/user/: entity.py  entity_user.py  service.py  value_objects.py
src/app/domain/value_objects/: base.py  raw_password.py  username.py
src/app/inbound/http/: api_v1_router.py  auth_cookie_middleware.py  root_router.py
src/app/infrastructure/: constants.py  exceptions.py
src/app/infrastructure/adapters/: app_version_provider_pyproject.py  auth_session_access_revoker.py  auth_session_identity_provider.py  bcrypt_password_hasher.py  exceptions.py  main_flusher_sqla.py  main_transaction_manager_sqla.py  password_hasher_bcrypt.py  sqla_flusher.py  sqla_transaction_manager.py  sqla_user_reader.py  sqla_user_tx_storage.py  system_utc_timer.py  types.py  user_data_mapper_sqla.py  user_id_generator_uuid.py  user_reader_sqla.py
src/app/infrastructure/adapters_application/: global_logout_service_session.py  identity_provider_session.py  user_data_mapper_sqla.py
src/app/infrastructure/auth_context/: log_in.py  log_out.py  sign_up.py
src/app/infrastructure/auth_ctx/: cookie_manager.py  exceptions.py  id_factory.py  jwt_processor.py  model.py  service.py  sqla_transaction_manager.py  sqla_tx_storage.py  sqla_user_tx_storage.py  utc_timer.py
src/app/infrastructure/auth_session/: service.py
src/app/infrastructure/base/: interactors.py
src/app/infrastructure/exceptions/: data_mapper.py
src/app/infrastructure/handlers/: log_in.py  log_out.py  sign_up.py
src/app/infrastructure/persistence/: user.py
src/app/infrastructure/persistence_sqla/: constraint_names.py  provider.py
src/app/infrastructure/session/: access_token_processor_jwt.py  exceptions.py  persistence_sqla.py  session_data_mapper_sqla.py  (+2 more)
src/app/main/: run.py  setup.py
src/app/presentation/: exception_handler.py  middleware_auth.py
src/app/presentation_http/: router_api_v1.py  router_root.py
src/app/presentation_http_controllers/: account_log_in.py  account_log_out.py  account_sign_up.py  admin_create_user.py  admin_grant_admin.py  admin_inactivate_user.py  admin_reactivate_user.py  admin_revoke_admin.py
src/app/setup/: app_factory.py
tests/app/performance/: profile_password_hasher_bcrypt.py
tests/integration/: conftest.py
tests/integration/migrations/: test_stairway.py
tests/integration/with_infra/: authentication.py  conftest.py  factories.py  test_stairway.py
tests/performance/: profile_bcrypt_password_hasher.py  profile_password_hasher_bcrypt.py
tests/sanity/config/: test_loader.py
tests/smoke/: conftest.py
tests/unit/: conftest.py
tests/unit/config/: test_loader.py  test_settings.py
tests/unit/infrastructure/: conftest.py  test_bcrypt_password_hasher.py
tests/unit/outbound/: conftest.py  test_bcrypt_password_hasher.py
(+621 files in other folders)
