[project]
name = "fastapi-clean-example"
version = "0.2"
description = "Practical Clean Architecture backend example built with FastAPI"
readme = "README.md"
requires-python = "==3.13.*"
license = "MIT"
authors = [
  { name = "Ivan Borovets", email = "ivan.r.borovets@gmail.com" },
]
dependencies = [
  "alembic==1.18.4",
  "bcrypt==5.0.0",
  "dishka==1.9.1",
  "fastapi==0.135.3",
  "fastapi-error-map==0.9.10",
  "psycopg[binary]==3.3.3",
  "pydantic-settings==2.13.1",
  "pyjwt[crypto]==2.12.1",
  "sqlalchemy[mypy]==2.0.48",
  "uuid-utils==0.14.1",
  "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
  "asgi-lifespan==2.1.0",
  "coverage==7.13.5",
  "deptry==0.25.1",
  "httpx==0.28.1",
  "import-linter==2.11",
  "line-profiler==5.0.2",
  "mypy==1.20.0",
  "pip-audit==2.10.0",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.8",
  "slotscheck==0.19.1",
  "tombi==0.9.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  ".* = Literal\\[.*\\]",
  ".* = NewType\\(.*\\)",
  "@abc\\.abstractmethod",
  "\\.\\.\\.",
  "^\\s*raise\\s*$",
  "from .* import .*",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "import .*",
  "logger\\..*",
  "logging\\..*",
  "pass",
]

[tool.coverage.run]
relative_files = true
source = ["src"]
omit = [
  "**/__init__.py",
  "src/app/main/**",
  "**/health/**",
  "**/alembic/**",
]
concurrency = ["thread"]
branch = true

[tool.deptry]
root = ["src"]
ignore = [
  "DEP002",  # Unused dependencies
  "DEP003",  # Transitive dependencies
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.importlinter]
root_package = "app"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
id = "clean-architecture"
name = "inner must not import outer"
type = "layers"
containers = ["app"]
layers = [
  "(main)",
  "inbound",
  "outbound",
  "core",
]
ignore_imports = [
  "app.outbound.persistence_sqla.alembic.env ->  app.main.config.loader",
  "app.outbound.persistence_sqla.alembic.env ->  app.main.config.settings",
]

[[tool.importlinter.contracts]]
id = "cqrs-common-must-not-import-commands"
name = "cqrs: common must not import commands"
type = "forbidden"
source_modules = ["app.core.common"]
forbidden_modules = ["app.core.commands"]

[[tool.importlinter.contracts]]
id = "cqrs-common-must-not-import-queries"
name = "cqrs: common must not import queries"
type = "forbidden"
source_modules = ["app.core.common"]
forbidden_modules = ["app.core.queries"]

[[tool.importlinter.contracts]]
id = "cqrs-commands-must-not-import-queries"
name = "cqrs: commands must not import queries"
type = "forbidden"
source_modules = ["app.core.commands"]
forbidden_modules = ["app.core.queries"]

[[tool.importlinter.contracts]]
id = "cqrs-queries-must-not-import-commands"
name = "cqrs: queries must not import commands"
type = "forbidden"
source_modules = ["app.core.queries"]
forbidden_modules = ["app.core.commands"]

[[tool.importlinter.contracts]]
id = "auth-ctx"
name = "auth-ctx must use its own adapters"
type = "forbidden"
source_modules = ["app.outbound.auth_ctx"]
forbidden_modules = ["app.outbound.adapters"]

[tool.mypy]
mypy_path = ["src"]
files = [
  "scripts",
  "src",
  "tests",
]
exclude = "^.*alembic.*$"
python_version = "3.13"
strict = true
pretty = true
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_no_return = true
warn_unreachable = true
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin",
]

[tool.pydantic-mypy]
warn_required_dynamic_aliases = true
warn_untyped_fields = true
init_typed = true

[tool.pytest]
addopts = ["--color=yes", "-mnot(slow)", "-pno:cacheprovider"]
filterwarnings = []
markers = ["slow"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
unsafe-fixes = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90",  # mccabe
  "DTZ",  # flake8-datetimez
  "E",  # pycodestyle (Error)
  "EXE",  # flake8-executable
  "F",  # Pyflakes
  "FAST",  # FastAPI
  "FLY",  # flynt
  "FURB",  # refurb
  "G",  # flake8-logging-format
  "I",  # isort
  "INT",  # flake8-gettext
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",  # pep8-naming
  "PERF",  # Perflint
  "PL",  # pylint
  "PLE",  # Pylint (error)
  "PLR5501",  # Pylint Refactor: collapsible-else-if
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",  # flake8-quotes
  "RSE",  # flake8-raise (RSE)
  "RUF",  # Ruff-specific rules
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self (SLF)
  "SLOT",  # flake8-slots
  "T10",  # flake8-debugger
  "T20",  # flake8-print
  "TC",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",  # pycodestyle (Warning)
]
ignore = [
  "PLR0913",  # too-many-arguments
  "PLR0917",  # too-many-positional-arguments
  "PLR6301",  # no-self-use
  "RUF001",  # ambiguous-unicode-character-string (cyrillic)
  "RUF002",  # ambiguous-unicode-character-docstring (cyrillic)
  "RUF003",  # ambiguous-unicode-character-comment (cyrillic)
  "S311",  # suspicious-non-cryptographic-random-usage
  "TC001",  # typing-only-first-party-import
  "TC002",  # typing-only-third-party-import
  "TC003",  # typing-only-standard-library-import
  "TC006",  # runtime-cast-value
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"scripts/dishka/plot_dependencies_data.py" = ["T201"]  # print
"src/app/outbound/persistence_sqla/alembic/**" = ["ALL"]
"tests/**" = [
  "ARG002",  # unused-method-argument
  "PLC2801",  # unnecessary-dunder-call
  "PLR2004",  # magic-value-comparison
  "PT011",  # pytest-raises-too-broad
  "S101",  # assert
  "S105",  # hardcoded-password-string
  "S106",  # hardcoded-password-func-arg
  "S107",  # hardcoded-password-default
  "SIM300",  # yoda-conditions
]

[tool.slotscheck]
strict-imports = true
exclude-modules = '''
^app\.outbound\.persistence_sqla\.alembic
'''

[tool.typos.files]
extend-exclude = []
